force-app/main/default/objects/ObjetoTeste__c/ObjetoTeste__c.object-meta.xml
<CustomObject>
    <label>ObjetoTeste</label>
    <nameField>
        <label>Nome de ObjetoTeste</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjetoTeste</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>