force-app/main/default/objects/ObjetoTeste__c/fields/CampoTeste2__c.field-meta.xml
<CustomField>
    <fullName>CampoTeste2__c</fullName>
    <defaultValue>&apos;Valor padrao aquidsadasdasdsa&apos;</defaultValue>
    <label>CampoTeste</label>
    <length>230</length>
    <type>Text</type>
</CustomField>