force-app/main/default/objects/ObjetoTeste__c/fields/CampoTeste__c.field-meta.xml
<CustomField>
    <fullName>CampoTeste__c</fullName>
    <defaultValue>&apos;Valor padrao aqui&apos;</defaultValue>
    <label>CampoTeste</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>