force-app/main/default/objects/ObjetoTeste__c/fields/teste4__c.field-meta.xml
<CustomField>
    <fullName>teste4__c</fullName>
    <label>teste3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>